# guild

./: .coverage  .gitignore  .guideline-exceptions.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  GEMINI.md  HANDOFF.md  HANDOFF_COMPETITION.md  HANDOFF_UI.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  VIOLATIONS.md  install.py  pyproject.toml
.flow/: current_diff.patch  pending_reviews.json
.flow/reviews/: common_code-review_beyond-guidelines-review.json  common_code-review_explain-review-reasoning.json  common_code-review_guidelines-based-review.json  common_code-review_prompt-responses.json  common_code-review_self-review-first.json  common_code-review_single-concern-pr.json  common_documentation_docs-match-code.json  common_documentation_version-in-output.json  common_git-strategy_atomic-commits.json  common_git-strategy_branch-naming.json  common_git-strategy_conventional-commits.json  common_git-strategy_delete-merged-branches.json  common_git-strategy_deployable-main.json  common_git-strategy_feature-branches.json  common_git-strategy_squash-merge.json  common_testing_accountable-coverage.json  common_testing_requirements-coverage.json  common_testing_requirements-traceability.json  common_testing_test-driven.json  common_testing_test-type-markers.json  python_best-practices_context-managers.json  python_best-practices_no-mutable-defaults.json  python_best-practices_use-enumerate.json  python_best-practices_use-fstrings.json  python_best-practices_use-isinstance.json  python_documentation_ruff-docstring-enforcement.json  python_error-handling_no-print.json  python_error-handling_specific-exceptions.json  python_organization_explicit-all-exports.json  python_organization_import-order.json  python_performance_prefer-builtins.json  python_performance_sets-for-membership.json  python_stack_max-complexity-10.json  python_stack_use-black.json  python_stack_use-mypy-strict.json  python_stack_use-ruff.json  python_style_line-length-100.json  python_style_naming-conventions.json  python_style_type-hints-everywhere.json
.guidelines/: exceptions.yaml
.guild/: config.toml  guild.db-shm  guild.db-wal
config/: default.toml
docs/: ARCHITECTURE_UI.md  LEARNINGS_FROM_LIVE_TEST.md  devto_submission.md
docs/developer/: README.md
docs/user/: README.md
examples/blocks/: coder.toml  coder_codex.toml  planner.toml  planner_codex.toml  reviewer.toml  reviewer_claude.toml  team_codex_claude.toml  team_dev.toml
examples/music-player-poc/: README.md  coder.toml  e2e_runner.toml  execution_trace.json  output_README.md  output_music_player.py  output_requirements.txt  team_music.toml  verifier.toml
scripts/: remote-ollama-setup.sh  req_coverage.py
src/configsloader/: __init__.py
src/guild/: __init__.py
src/logger_python/: __init__.py
tests/: test_agent.py  test_api.py  test_bus.py  test_chat.py  test_checkpoint.py  test_cli.py  test_cli_new.py  test_config.py  test_config_cli.py  test_context.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_coverage_gaps3.py  test_coverage_gaps4.py  test_deterministic_eval.py  test_install.py  test_learning.py  test_learning_confidence.py  test_models.py  test_p2_features.py  test_permission_switch.py  test_permissions.py  test_registry.py  test_router.py  test_rpg.py  test_safety_rules.py  test_storage.py  test_stuck.py  test_stuck_config.py  test_stuck_integration.py  test_team_execution.py  test_team_runner.py  test_timeout.py  test_tokens.py  test_tool_result.py  test_wiring.py
tests/agent/: test_budget.py  test_checkpoint.py  test_completion.py  test_context.py  test_cost.py  test_learning.py  test_loop.py  test_message.py  test_prompts.py  test_ratelimit.py  test_rollback.py  test_stuck.py
tests/api/: test_a2a.py  test_server.py
tests/artifacts/: test_manager.py
tests/blocks/: __init__.py  test_definition.py  test_port_types.py  test_registry.py  test_skills.py
tests/cli/: test_daemon_ops.py  test_main.py  test_queries.py  test_task_runner.py  test_toml_utils.py
tests/config/: test_loader.py  test_models.py  test_profiles.py
tests/daemon/: conftest.py  test_control_socket.py  test_lifecycle.py  test_platform.py  test_resource.py  test_run.py  test_sleep_wake.py  test_supervisor.py
tests/e2e/: conftest.py  test_blocks_and_teams.py  test_cli_commands.py  test_context_and_learning.py  test_daemon_and_features.py  test_daemon_lifecycle.py  test_observability_and_tasks.py  test_remaining_features.py  test_security_config_eval.py  test_task_lifecycle.py  test_team_and_api.py  test_tools_and_resources.py
tests/escalation/: test_notify.py  test_queue.py
tests/eval/: test_framework.py
tests/git/: __init__.py  test_policy.py  test_worktree.py
tests/integration/: conftest.py  test_agent_pipeline.py  test_api_and_decisions.py  test_blocks_and_teams.py  test_context_and_learning.py  test_daemon_and_features.py  test_daemon_lifecycle.py  test_daemon_lifecycle_extended.py  test_observability_and_tasks.py  test_remaining_features.py  test_security_config_eval.py  test_task_lifecycle.py  test_team_and_api.py  test_tools_and_resources.py
tests/knowledge/: test_memory.py  test_temporal.py
tests/learning/: __init__.py  test_aiosqlite.py  test_ollama_sdk.py  test_rich.py  test_tomllib.py  test_typer.py
tests/mcp/: test_client.py  test_registry.py
tests/observability/: test_logging_config.py  test_replay.py  test_tracing.py
tests/offline/: test_manager.py
tests/orchestration/: test_bus.py  test_spawner.py  test_team_runner.py
tests/permissions/: test_checker.py
tests/provider/: test_base.py  test_cli_provider.py  test_escalation.py  test_ollama.py  test_retry.py
tests/security/: test_docker_sandbox.py  test_sandbox.py
tests/storage/: test_protocol.py  test_sqlite.py
tests/task/: test_spec.py
tests/templates/: test_manager.py
tests/tools/: test_base.py  test_file_ops.py  test_plugin.py  test_registry.py  test_search.py  test_shell.py  test_tool_contract.py  (+1 more)
ui/: REQUIREMENTS.md  REQUIREMENTS_v2.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js
(+152 files in other folders)
