[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guild"
version = "0.2.0"
description = "Locally-focused agent harness for LLM-powered autonomous coding"
requires-python = ">=3.11"
dependencies = [
    # Configuration loading from TOML/YAML files with schema validation
    "configsloader>=0.1.0",
    # CLI framework with type-based argument parsing (powers `guild` command)
    "typer>=0.9,<1",
    # Terminal formatting: tables, syntax highlighting, progress bars
    "rich>=13.0,<14",
    # Async SQLite driver for non-blocking storage operations
    "aiosqlite>=0.19,<1",
    # Ollama client SDK for local LLM inference via HTTP API
    "ollama>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    # Test runner with fixtures, markers, and parametrize
    "pytest>=7.0",
    # Async test support — enables `async def test_*` functions
    "pytest-asyncio>=0.21",
    # Fast Python linter (replaces flake8 + isort + pyupgrade)
    "ruff>=0.4",
    # Opinionated code formatter for consistent style
    "black>=24.0",
    # Static type checker for catching type errors pre-runtime
    "mypy>=1.5",
]

[project.scripts]
guild = "guild.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no I/O, use mocks)",
    "integration: Integration tests (real Ollama required)",
    "e2e: End-to-end tests (full workflows)",
    "req(id): Requirement ID this test verifies",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["guild"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
