[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guild"
version = "0.2.0"
description = "Locally-focused agent harness for LLM-powered autonomous coding"
requires-python = ">=3.11"
dependencies = [
    # CLI framework with type-based argument parsing (powers `guild` command)
    "typer>=0.9,<1",
    # Terminal formatting: tables, syntax highlighting, progress bars
    "rich>=13.0,<14",
    # Async SQLite driver for non-blocking storage operations
    "aiosqlite>=0.19,<1",
    # Ollama client SDK for local LLM inference via HTTP API
    "ollama>=0.4,<1",
    # Unified structured logging
    "logger-python @ git+ssh://git@github.com/LightShield/logger_python.git",
    # Declarative multi-source configuration
    "configsloader @ git+ssh://git@github.com/LightShield/configs_loader_python.git",
]

[project.optional-dependencies]
api = [
    # ASGI web framework for the REST API and WebSocket support
    "fastapi>=0.109,<1",
    # ASGI server to run the FastAPI app
    "uvicorn[standard]>=0.27,<1",
]
dev = [
    # Test runner with fixtures, markers, and parametrize
    "pytest>=7.0",
    # Async test support — enables `async def test_*` functions
    "pytest-asyncio>=0.21",
    # Coverage measurement with branch analysis
    "pytest-cov>=4.0",
    # Fast Python linter (replaces flake8 + isort + pyupgrade)
    "ruff>=0.4",
    # Opinionated code formatter for consistent style
    "black>=24.0",
    # Static type checker for catching type errors pre-runtime
    "mypy>=1.5",
]

[project.scripts]
guild = "guild.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, mocks allowed, tests logic in isolation)",
    "integration: Integration tests (real components wired together, no external services)",
    "e2e: End-to-end acceptance tests (black-box, exercises system from outside)",
    "learning: Learning tests (verify third-party library assumptions)",
    "req(id): Requirement ID (deprecated — use ac marker instead)",
    "ac(id): Acceptance criteria ID this test verifies (e.g., AC-04.1.2)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "D"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["guild"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
branch = true
source = ["src/guild"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "class .*\\bProtocol\\b",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
    "pragma: no cover",
]
omit = [
    "src/guild/storage/protocol.py",
    "src/guild/daemon/run.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
